--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,7 @@
 matplotlib
 networkx
 sortedcontainers
+# sudo apt-get install python3-tk
+# sudo apt-get install graphviz libgraphviz-dev pkg-config
+
+pygraphviz
